use_undefined_identifier/c3/extended_in_check
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/extended_in_check/src/moves.c:1702:6: error: use of undeclared identifier 'dword_66859C'
v4 = dword_66859C[bking_loc]; 
     ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/extended_in_check/src/moves.c:1742:8: error: use of undeclared identifier 'dword_66859C'
if ( ( dword_66859C[wking_loc] & 0xFFFFFFFD) == 8 ) 
       ^
2 errors generated.
make: *** [/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/extended_in_check/src/obj/moves.o] Error 1
